# scripts

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
dashboard/: __init__.py  api.py  index.html
data/: custom.toml  github_repos.toml
others/: yt_music_like_all_songs_in_a_playlist.js
scripts/: __init__.py  good_first_issue_tracker.py  runner.py
